Fix fitting to screen when width is too small

--- a/css/notengalaxie.css
+++ b/css/notengalaxie.css
@@ -1,8 +1,15 @@
 html {
+	margin: 0;
+    padding: 0;
+	border: 0;
+	overflow: hidden;
 }
 
 body {
-	margin: 0;
+    margin: 0;
+    padding: 0;
+	border: 0;
+	overflow: hidden;
 	background-color: black;
 }
 
@@ -12,7 +19,7 @@ body {
 	background-image: url("../images/title-01.png");
 	background-size: 100%;
 	background-repeat: no-repeat;
-	height:99vh;
+	height:100vh;
 	width:80vh;
 	margin: 0 auto;
 	padding: 0px;
